objects/APIUser__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security_Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>APIUser</label>
</CustomObject>